# FIEFS

./: .pre-commit-config.yaml  FIEFS.py  README.md  inputGUI.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
GUI/: GUI_tabs.py  bcs_tab.py  flow_parameters_tab.py  geometry_tab.py  outputs_tab.py  plot_tab.py  run_tab.py  time_parameters_tab.py
figures/: Karman_fluid.mov
inputs/: GUI_input_file.txt  inputs.in  kh.in
misc/: citations.bib
plotting/: plotter.py
src/: data_saver.py  eos.py  input.py  mesh.py  riemann.py  tools.py
src/pgen/: kh.py  sample.py
tests/: test_.py
workflow/: environment.yaml
